Fix: Remove min-height causing screen size overflow

--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,6 @@ body {
   margin: 0px;
   font-weight: 800;
   min-width: 320px;
-  min-height:600px;
 }
 
 h1 {
